slice and no phone found message done

--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
 
 
             </div>
+
+            <div id="no-phone-found-message" class="d-none">
+                <h3 class="text-warning text-center">No phone found. Please try again.</h3>
+            </div>
         </section>
+
+
+
     </main>
 
 
