--- a/index.html
+++ b/index.html
@@ -25,17 +25,23 @@
             </div>
         </section>
 
-
+        <!---phone display and create child-->
         <section>
-            <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4">
-
-
-
+            <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4 mb-5">
 
             </div>
-
+            <!---no phone found message-->
             <div id="no-phone-found-message" class="d-none">
                 <h3 class="text-warning text-center">No phone found. Please try again.</h3>
+            </div>
+        </section>
+
+        <!----toggle spinner loading-->
+        <section>
+            <div id="loader" style="height: 150px;" class="text-center text-success d-none mt-4">
+                <div class="spinner-border" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
             </div>
         </section>
 
