show all button added

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
             <div id="no-phone-found-message" class="d-none">
                 <h3 class="text-warning text-center">No phone found. Please try again.</h3>
             </div>
+            <!----show all button-->
+            <div id="show-all" class="text-center d-none">
+                <div id="btn-show-all" class="btn btn-primary mb-4">Show All</div>
+            </div>
         </section>
 
         <!----toggle spinner loading-->
